  in the import and then saving a new TGA file, which might not result in
  file-identical TGAs (especially for TGA files made with another tool, or
  generated by older Editor code).

--Fixed so that we have separate AHAP URL settings files for all of our
  auxillary servers, as accessed by the client.

--Updated rootAddNewDownloadServer.sh to handle AHAP downloads.




Server Fixes:

--Changed curse radius formula to start much smaller when there are only a few
  living people cursing you, but then go up on a parabolic curve from there.
  Old formula started larger and then went up linearly.  The old formula
  allowed one mega-curser to effectively block lots of players from being born
  in a given town.  Fixes #1034




Version 412   2024-February-16

--Support for AHAP differentiation with a text file in the game folder.  AHAP
  clients skip universal _all.dbz content diff bundles.

--AHAP clients now check online ahapVersion.txt and download content update
  diff bundles from a separate AHAP update server.  They also use a separate
  AHAP reflector when connecting.  Client and server, if isAHAP.txt is set to
  1, track binary version number separate from data version number.
  AutoUpdatePage messaging is different for AHAP clients when downloading diff
  bundles.

--Importer, when adding new objects (instead of replacing old), prints out
  object ID remapping.

--Fixed objectBank and spriteBank to roll back nextObject/SpriteNumber value
  whenever last object/sprite in bank is deleted, to avoid id inflation.
  soundBank was already doing this.

--Whoops... major bug when importing new sprites.  fillSprite can actually
  modify sprite data (to expand edges of sprites for seamless tiling), so we
  can't do that before saving the sprite data to disk.

--Authorship tagging (with hmac of email) in object text files.

--Authorship tagging in animation text files.

--Authorship tagging in transition text files.
